# cutl

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: allocation.h  buffer.h  context.h  cutl.h  info.h  pipeline.h  renderer.h  result.h  scene.h  vec2.h  vec3.h  vec4.h  window.h
src/: context.c  dyn_buf.c  dynamic_vbo.c  memory.h  pipeline.c  renderer.c  scene.c  standard_allocator.c  swapchain.c  swapchain.h  util.h  window.c
tests/: triangle.c  util.h  vbo.c
tests/shader_src/: triangle.frag  triangle.vert  vbo.frag  vbo.vert
tests/shaders/: triangle.frag.spv  triangle.vert.spv  vbo.frag.spv  vbo.vert.spv
